--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+td{
+  width: 150px;
+}
+
+.image{
+  height: 150px;
+}
+
+.table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
